# SpeedSignDetector

./: .gitignore
Detector/: CMakeLists.txt  Detector.pro  arrays.cpp  arrays.h  detection.cpp  detection.h  detector.cpp  detector.h  math_utilities.cpp  math_utilities.h
SpeedSignDetectorCommandLine/: CMakeLists.txt  detectortask.cpp  detectortask.h  main.cpp
SpeedSignDetectorViewer/: CMakeLists.txt  imagescene.cpp  imagescene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
